Added seperate js file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div id = "1" class = "todo">
+    <script src="userServerInteraction.js"></script>
     <div>
         <div name = "DoneButton">
-            <script type="text/javascript">function toDoFinished(){document.getElementById('1B').classList.toggle("IsDone");}</script>
             <input type="checkbox" id="1B" class="IsDoneF" onclick="toDoFinished()">
         </div>
         <div name = "EditButton">
@@ -12,4 +12,5 @@
         <p name = "Title"></p>
         <p name = "Description"></p>
     </div>
+    <div name = "daysLeft"> Days left: </div>
 </div> 
