BIG COMIT. Shows todo entries
After aeons of reading online tuttorials and documentation this thing works.
Left to do:
1. Completed task window
2. Edit tasks
3. Remove tasks
4. Make it look good rather than barebones html elements. Really does give the vibe of paperclip simulator

--- a/page_elements/toDoEntryOutline.html
+++ b/page_elements/toDoEntryOutline.html
@@ -1,11 +1,10 @@
 <div id = "1" class = "todo impScore">
-    <script src="userServerInteraction.js"></script>
     <div>
         <div name = "DoneButton">
             <input type="checkbox" id="1B" class="IsDoneF" onclick="toDoToggle(1)">
         </div>
         <div name = "EditButton">
-            <input type="button" id="1E" onclick="editTodo()">
+            <input type="button" id="1E" onclick="editTodo(1)">
         </div>
     </div>
     <div name = "body">
@@ -14,4 +13,5 @@
     </div>
     <div name = "daysLeft">
     </div>
+    <div name = "DeleteButton"></div>
 </div> 
